responsive horizontal scrollbar fix at 320px

--- a/src/app/main-page/about-me/about-me.component.sass
+++ b/src/app/main-page/about-me/about-me.component.sass
@@ -21,7 +21,7 @@ main
     display: flex
     @media screen and ( min-width: 1024px )
         height: fit-content
-        
+
     img
         width: 100%
         border-radius: 30px
@@ -66,6 +66,8 @@ p
 
 #aboutmeCard
     @extend .cardContainer
+    @media screen and ( max-width: 325px )
+        padding: 27px 30px
 
     p
         color: white
